--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "Learning resources for the webpack academy workshop series for 2018",
   "main": "index.js",
   "scripts": {
-    "webpack": "webpack"
+    "webpack": "webpack",
+    "dev": "npm run webpack -- --mode development",
+    "prod": "npm run webpack -- --mode production"
   },
   "repository": {
     "type": "git",
@@ -19,6 +21,9 @@
     "@babel/core": "^7.0.0-beta.46",
     "@babel/preset-env": "^7.0.0-beta.46",
     "babel-loader": "^8.0.0-beta",
+    "bugs": {
+      "url": "https://github.com/TheLarkInn/webpack-workshop-2018/issues"
+    },
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
     "fork-ts-checker-webpack-plugin": "^0.4.1",
@@ -29,14 +34,11 @@
     "postcss-loader": "^2.1.5",
     "style-loader": "^0.21.0",
     "ts-loader": "^4.2.0",
-    "bugs": {
-      "url": "https://github.com/TheLarkInn/webpack-workshop-2018/issues"
-    },
     "url-loader": "^1.0.1",
-    "webpack": "^4.8.0",
+    "webpack": "^4.8.3",
     "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "^2.1.3",
-    "webpack-command": "^0.1.1",
+    "webpack-command": "^0.2.0",
     "webpack-node-externals": "^1.7.2",
     "workbox-webpack-plugin": "^3.2.0"
   },
