--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
     "Learning resources for the webpack academy workshop series for 2018",
   "main": "index.js",
   "scripts": {
-    "webpack": "node ./node_modules/webpack/bin/webpack.js",
+    "webpack": "webpack",
+    "webpack:debug":
+      "node --inspect --inspect-brk ./node_modules/webpack/bin/webpack.js",
     "debug": "npm run webpack -- --inspect --debug-brk",
     "prod": "npm run webpack -- --mode production",
-    "dev": "npm run webpack -- --mode development",
+    "dev": "npm run webpack -- --mode development --watch",
     "prod:debug": "npm run debug -- --mode production",
-    "dev:debug": "npm run debug -- --mode development"
+    "dev:debug": "npm run debug -- --mode development",
+    "debugthis": "node --inspect --inspect-brk ./src/index.js"
   },
   "repository": {
     "type": "git",
