--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "main": "index.js",
   "scripts": {
     "webpack": "webpack",
+    "webpack-dev-server": "webpack-dev-server",
     "webpack:debug":
       "node --inspect --inspect-brk ./node_modules/webpack/bin/webpack.js",
     "debug": "npm run webpack -- --inspect --debug-brk",
-    "prod": "npm run webpack -- --mode production",
-    "dev": "npm run webpack -- --mode development --watch",
-    "prod:debug": "npm run debug -- --mode production",
-    "dev:debug": "npm run debug -- --mode development",
+    "prod": "npm run webpack -- --env.mode production",
+    "dev": "npm run webpack-dev-server -- --env.mode development --watch",
+    "prod:debug": "npm run debug -- --env.mode production",
+    "dev:debug": "npm run debug -- --env.mode development",
     "debugthis": "node --inspect --inspect-brk ./src/index.js"
   },
   "repository": {
@@ -27,6 +28,9 @@
     "@babel/core": "^7.0.0-beta.46",
     "@babel/preset-env": "^7.0.0-beta.46",
     "babel-loader": "^8.0.0-beta",
+    "bugs": {
+      "url": "https://github.com/TheLarkInn/webpack-workshop-2018/issues"
+    },
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
     "fork-ts-checker-webpack-plugin": "^0.4.1",
@@ -37,14 +41,12 @@
     "postcss-loader": "^2.1.5",
     "style-loader": "^0.21.0",
     "ts-loader": "^4.2.0",
-    "bugs": {
-      "url": "https://github.com/TheLarkInn/webpack-workshop-2018/issues"
-    },
     "url-loader": "^1.0.1",
     "webpack": "^4.8.0",
     "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "^2.1.3",
     "webpack-command": "^0.1.1",
+    "webpack-dev-server": "^3.1.4",
     "webpack-node-externals": "^1.7.2",
     "workbox-webpack-plugin": "^3.2.0"
   },
